--- a/src/components/TimelineBar.css
+++ b/src/components/TimelineBar.css
@@ -82,7 +82,7 @@
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 40;
+    z-index: 150;
     pointer-events: none;
     display: flex;
     flex-direction: column;
